--- a/views/index.html
+++ b/views/index.html
@@ -20,8 +20,8 @@
   </head>
   <body>
     <iframe
-        width="350"
-        height="430"
+        width="100%"
+        height="500px"
         src="https://console.dialogflow.com/api-client/demo/embedded/45107fa3-b760-4526-a748-c55652e3248d">
     </iframe>
   </body>
